# m2-coursework

./: LICENSE  README.md  coursework.ipynb  pyproject.toml  results.json  writeup.md
checkpoints/: flow_full.pt
data/: moons_test.csv  moons_train.csv  moons_val.csv
logs/: training_curves.json
src/flows/: __init__.py  correctness.py  data.py  explore.py  model.py  profile.py  sanity.py  train.py  viz.py
tests/: test_data.py  test_model.py
